...
                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="kV0-Z0-KDE">
                                            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2Nh-eQ-Ocl">
                                                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="flickrImage"/>
                                                </imageView>
                                            </subviews>
                                            <constraints>
                                                <constraint firstItem="2Nh-eQ-Ocl" firstAttribute="top" secondItem="kV0-Z0-KDE" secondAttribute="top" id="Gxl-ls-cDE"/>
                                                <constraint firstItem="2Nh-eQ-Ocl" firstAttribute="leading" secondItem="kV0-Z0-KDE" secondAttribute="leading" id="Ta1-DQ-Lzo"/>
                                                <constraint firstAttribute="bottom" secondItem="2Nh-eQ-Ocl" secondAttribute="bottom" id="eK9-v8-I9W"/>
...
                                        <connections>
                                            <outlet property="flickrImageView" destination="2Nh-eQ-Ocl" id="YMg-NJ-mwH"/>
                                        </connections>
                                    </collectionViewCell>
                                </cells>
                            </collectionView>
                            <searchBar contentMode="redraw" placeholder="Search Image" translatesAutoresizingMaskIntoConstraints="NO" id="oll-vb-nlE">
                                <rect key="frame" x="0.0" y="44" width="414" height="56"/>
                                <textInputTraits key="textInputTraits"/>
                            </searchBar>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start exploring Flickr !!" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dWW-Q6-DWa">
                                <rect key="frame" x="68" y="431.5" width="278" height="43"/>
                                <constraints>
...
